Some fixes adviced by IntelliJ IDEA 5.1 code inspector.
git-svn-id: https://svn.codehaus.org/izpack/izpack-src/trunk@1422 7d736ef5-cfd4-0310-9c9a-b52d5c14b761